--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.2",
   "description": "A small wrapper for configuring and managing Sequelize in AWS Lambda functions",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist",
